--- a/Vue/自定义指令/demo1.html
+++ b/Vue/自定义指令/demo1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>自定义全局指令</title>
-<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
 <div id="app">
